--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <script type="text/javascript">
       window.txt = {
+        title: "GALACTIC SPINNER",
+        btn: "SPIN NOW",
         greet: {
           head: "Greetings of Free spins!",
           mes: "Grab your chance to win $1000 and FREE SPINS as welcome bonus by using 5 free spins only available today!",
         },
         how: {
           head: "How to Play and Win",
-          color: "RED",
-          mes1: "Test your luck and try to win by pulling the ",
-          mes2: " lever of the Machine on the right. Good Luck!",
+          color: "PULSING",
+          mes1: "Test your luck and try to win by pressing the ",
+          mes2: " button below to spin. Good Luck!",
         },
         terms: {
           head: "Terms and Condition",
